--- a/views/home.ejs
+++ b/views/home.ejs
@@ -185,6 +185,34 @@
     <!-- Products Start -->
     <div class="container-fluid pt-5">
         <div class="text-center mb-4">
+            <h2 class="section-title px-5"><span class="px-2">Trandy Products</span></h2>
+        </div>
+        <div class="row px-xl-5 pb-3">
+            <%Allproduct.forEach((Allproduct)=>{%>
+
+          
+            <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
+                <div class="card product-item border-0 mb-4">
+                    <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
+                        <img class="img-fluid w-100" src="/NewFolder/image-/<%= Allproduct.images[0] %>" alt="">
+                    </div>
+                    <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
+                        <h6 class="text-truncate mb-3"><%= Allproduct.productName%></h6>
+                        <div class="d-flex justify-content-center">
+                            <h6> ₹ <%= Allproduct.offerPrice %>  </h6><h6 class="text-muted ml-2"><del> ₹ <%= Allproduct.price%> </del></h6>
+                        </div>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between bg-light border">
+                        <a href="/viewProduct/<%= Allproduct.id %>" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Product</a>
+                        <a href="/addtowishlist/<%= Allproduct.id %> " class="btn btn-sm text-dark p-0"><i class="fas fa-heart text-primary mr-1"></i>favorote</a>
+                    </div>
+                </div>
+            </div>
+            <%   }) %>
+        </div>
+    </div>
+    <!-- <div class="container-fluid pt-5">
+        <div class="text-center mb-4">
             <h2 class="section-title px-5"><span class="px-2">Just Arrived</span></h2>
         </div>
         <div class="row px-xl-5 pb-3">
@@ -325,7 +353,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Products End -->
 
 
