--- a/views/partials/admin-navbar.ejs
+++ b/views/partials/admin-navbar.ejs
@@ -94,6 +94,15 @@
           <li class="nav-item">
             <a class="nav-link" href="/admin/order-management">Orders</a>
           </li>
+         
+                <form action="/logout" method="post">
+                <button type="submit"class="dropdown-item">Logout</button>
+                </form>
+                <!-- <a href="/logout" class="dropdown-item">Logout</a> -->
+                <!-- <a href="/profile" class="dropdown-item">Profile</a>
+                <a href="/myOrders" class="dropdown-item">My Orders</a> -->
+            </div>
+          
           
         </ul>
       </div>
