--- a/views/partials/nevTwo.ejs
+++ b/views/partials/nevTwo.ejs
@@ -129,6 +129,7 @@
                                         </form>
                                         <!-- <a href="/logout" class="dropdown-item">Logout</a> -->
                                         <a href="/profile" class="dropdown-item">Profile</a>
+                                        <a href="/myOrders" class="dropdown-item">My Orders</a>
                                     </div>
 
                           <%  }else{%>
