--- a/views/partials/user-navbar.ejs
+++ b/views/partials/user-navbar.ejs
@@ -55,7 +55,7 @@
             <div class="col-lg-3 col-6 text-right">
                 <a href="/getwishlist/<%=locals.userId%>  " class="btn border">
                     <i class="fas fa-heart text-primary"></i>
-                    <span class="wishlist-item-count">0</span>
+                    <span class="wishlist-item-count"></span>
                 </a>
                 <a href="/getcart" class="btn border">
                     <i class="fas fa-shopping-cart text-primary"></i>
@@ -149,6 +149,10 @@
                         <%} %> 
                     </div>
                 </nav>
+
+
+
+
                 <div id="header-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" style="height: 410px;">
@@ -161,7 +165,10 @@
                                 </div>
                             </div>
                         </div>
-                         <div class="carousel-item" style="height: 410px;">
+
+
+                        
+                         <!-- <div class="carousel-item" style="height: 410px;">
                             <img class="img-fluid" src="https://cdn.shopify.com/s/files/1/0584/8770/1661/files/03_6bc9b7ec-8649-4f05-87f1-eda67359fe3e_1400x.jpg?v=1630935587" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
@@ -170,7 +177,7 @@
                                     <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
                         <div class="btn btn-dark" style="width: 45px; height: 45px;">
