--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -45,7 +45,7 @@
                             </div>
                             <div class="card-footer d-flex justify-content-between bg-light border">
                                 <a href="/viewProduct/<%= data.id %> " class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                                <a href="/addtowishlist/<%= data.id %> " class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Wishlist</a>
+                                <a href="/addtowishlist/<%= data.id %> " class="btn btn-sm text-dark p-0"><i class="fas fa-heart text-primary mr-1"></i>Add To Wishlist</a>
                             </div>
                         </div>
                     </div>
