--- a/views/layout/cart-layout.ejs
+++ b/views/layout/cart-layout.ejs
@@ -22,14 +22,14 @@
      
      <!-- Customized Bootstrap Stylesheet -->
     
-     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
+     <!-- <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
      <link rel="stylesheet" href="/NewFolder2/css/font-awesome.min.css" type="text/css">
      <link rel="stylesheet" href="/NewFolder2/css/elegant-icons.css" type="text/css">
      <link rel="stylesheet" href="/NewFolder2/css/nice-select.css" type="text/css">
      <link rel="stylesheet" href="/NewFolder2/css/jquery-ui.min.css" type="text/css">
      <link rel="stylesheet" href="/NewFolder2/css/owl.carousel.min.css" type="text/css">
      <link rel="stylesheet" href="/NewFolder2/css/slicknav.min.css" type="text/css">
-     <link rel="stylesheet" href="/NewFolder2/css/style.css" type="text/css">
+     <link rel="stylesheet" href="/NewFolder2/css/style.css" type="text/css"> -->
      
      <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
      crossorigin="anonymous"></script>
