--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -31,6 +31,15 @@
      <link rel="stylesheet" href="/css/slicknav.min.css" type="text/css">
      <link rel="stylesheet" href="/NewFolder2/css/style.css" type="text/css"> -->
      
+
+     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
+     <link rel="stylesheet" href="/NewFolder2/css/font-awesome.min.css" type="text/css">
+     <link rel="stylesheet" href="/NewFolder2/css/elegant-icons.css" type="text/css">
+     <link rel="stylesheet" href="/NewFolder2/css/nice-select.css" type="text/css">
+     <link rel="stylesheet" href="/NewFolder2/css/jquery-ui.min.css" type="text/css">
+     <link rel="stylesheet" href="/NewFolder2/css/owl.carousel.min.css" type="text/css">
+     <link rel="stylesheet" href="/NewFolder2/css/slicknav.min.css" type="text/css">
+     <link rel="stylesheet" href="/NewFolder2/css/style.css" type="text/css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Men's Fasion</title>
   </head>
