--- a/views/partials/user-navbar.ejs
+++ b/views/partials/user-navbar.ejs
@@ -34,7 +34,7 @@
         <div class="row align-items-center py-3 px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
                 <a href="" class="text-decoration-none">
-                    <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-black font-weight-bold border px-3 mr-1">Men's</span>Fashion</h1>
+                    <h1 class="m-0 display-5 font-weight-semi-bold"><span style="color:#D19C97" class="color:#d7af9e font-weight-bold border px-3 mr-1">M</span>Style</h1>
                 </a>
             </div>
             <div class="col-lg-6 col-6 text-left">
