--- a/views/admin/coupon-management.ejs
+++ b/views/admin/coupon-management.ejs
@@ -1,8 +1,7 @@
-
-
-<div></div>
+<%- include("../partials/admin-navbar") %> 
+<div style="margin-top:5rem ;">
 <button type="button" class="btn btn-primary mt-5 ml-4" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Add coupon</button>
-
+</div>
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
