--- a/views/user/shopeAll.ejs
+++ b/views/user/shopeAll.ejs
@@ -1,15 +1,16 @@
-<%- include('../partials/nevTwo') %> 
+<%-include('../partials/nevTwo') %> 
             <!-- Shop Product Start -->
+            <div class="">
             <div class="col-lg-9 col-md-12 ml-5">
                 <div class="row pb-3 ml-5">
                     <div class="col-12 pb-1">
                         <div class="d-flex align-items-center justify-content-between mb-4">
                             <form action="">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search by name">
+                                    <!-- <input type="text" class="form-control" placeholder="Search by name"> -->
                                     <div class="input-group-append">
                                         <span class="input-group-text bg-transparent text-primary">
-                                            <i class="fa fa-search"></i>
+                                            <!-- <i class="fa fa-search"></i> -->
                                         </span>
                                     </div>
                                 </div>
@@ -28,14 +29,14 @@
                         </div>
                     </div>
 
-                        
-                    <% categoryWiseProduct.forEach((data)=>{%>
-                           
-                  
+                   
+                    <%allProduct.forEach((data)=>{%>
+                          
+                     
                     <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
                         <div class="card product-item border-0 mb-4">
                             <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                                <img class="img-fluid w-100" src="/NewFolder/image-/<%= data.images[0] %> " alt="">
+                                <img class="img-fluid w-100 " src="/NewFolder/image-/<%= data.images[0] %> " alt="">
                             </div>
                             <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                                 <h6 class="text-truncate mb-3"><%=data.Name%> </h6>
@@ -49,7 +50,9 @@
                             </div>
                         </div>
                     </div>
+                
                     <% }) %> 
+             
                     
 
 
@@ -78,8 +81,9 @@
                     </div>
                 </div>
             </div>
-            <!-- Shop Product End -->
         </div>
-    </div>
+            <!-- Shop Product End -->
+        
+
     <!-- Shop End -->
 
