--- a/views/partials/user-navbar.ejs
+++ b/views/partials/user-navbar.ejs
@@ -109,8 +109,8 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
                             <a href="/" class="nav-item nav-link active">Home</a>
-                            <a href="/" class="nav-item nav-link">Shop</a>
-                            <a href="/" class="nav-item nav-link">Shop Detail</a>
+                            <a href="/allProduct" class="nav-item nav-link">Shop</a>
+                            <!-- <a href="/allProduct" class="nav-item nav-link">Shop Detail</a> -->
                             <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu rounded-0 m-0">
