--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -218,9 +218,12 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/js/order.js"></script>
 <script>
-
-  const couponDiscount = "<%=couponDiscount%>";
-  const amount = "<%=viewcart.total*100%>";
+    
+  let couponDiscount = "<%=couponDiscount%>";
+  let cartTotal = "<%=viewcart.total%>";
+  let amount = couponDiscount ? (cartTotal - couponDiscount) * 100 : cartTotal * 100
+  amount = parseInt(amount)
+  console.log(amount)
 
   let data;
   document.addEventListener("DOMContentLoaded", async function () {
