--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -1,6 +1,6 @@
 <%-include('../partials/nevTwo') %>
 <!-- Checkout Section Begin -->
-<div class="container mt-5 py-5">
+<div class="container">
   <section class="checkout spad">
     <div class="container">
       <div class="row">
@@ -78,13 +78,13 @@
               <div class="col-lg-6">
                 <div class="checkout__input">
                   <p>Fist Name<span>*</span></p>
-                  <input type="text" name="firstName"/>
+                  <input type="text" name="firstName" />
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="checkout__input">
                   <p>Last Name<span>*</span></p>
-                  <input type="text" name="lastName"/>
+                  <input type="text" name="lastName" />
                 </div>
               </div>
             </div>
@@ -98,25 +98,25 @@
                 type="text"
                 placeholder="Street Address"
                 class="checkout__input__add"
-                name="address" 
+                name="address"
               />
               <input
                 type="text"
                 placeholder="Apartment, suite, unite ect (optinal)"
-                name="areaLocalName" 
+                name="areaLocalName"
               />
             </div>
             <div class="checkout__input">
               <p>Town/City<span>*</span></p>
-              <input type="text"  name="district" />
+              <input type="text" name="district" />
             </div>
             <div class="checkout__input">
               <p>Country/State<span>*</span></p>
-              <input type="text"  name="state" />
+              <input type="text" name="state" />
             </div>
             <div class="checkout__input">
               <p>Postcode / ZIP<span>*</span></p>
-              <input type="text" name=" postcode"  />
+              <input type="text" name=" postcode" />
             </div>
             <div class="row">
               <div class="col-lg-6">
@@ -133,12 +133,16 @@
               </div>
             </div>
             <div class="col-sm-9 text-secondary">
-              <input type="submit" onclick="addAddress()" class="btn btn-outline-dark" value="Create new address">
+              <input
+                type="submit"
+                onclick="addAddress()"
+                class="btn btn-outline-dark"
+                value="Create new address"
+              />
             </div>
           </div>
-       
 
-           <div class="col-lg-4 col-md-6" id="check">
+          <div class="col-lg-4 col-md-6" id="check">
             <div class="checkout__order">
               <h4>Your Order</h4>
               <div class="checkout__order__products">
@@ -218,13 +222,18 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/js/order.js"></script>
 <script>
-    
+
+  
   let couponDiscount = "<%=couponDiscount%>";
-  let cartTotal = "<%=viewcart.total%>";
+
+  
+  let cartTotal = Number("<%=viewcart.total%>");
   let amount = couponDiscount ? (cartTotal - couponDiscount) * 100 : cartTotal * 100
   amount = parseInt(amount)
-  console.log(amount)
-
+  console.log(amount,"--------amount")
+  if(couponDiscount==NaN){
+      console.log("working if")
+  }
   let data;
   document.addEventListener("DOMContentLoaded", async function () {
     try {
@@ -252,7 +261,6 @@
       response = await axios.post(`/redeem/${couponCode}`);
       console.log(response.data);
       if (response.status == 200) {
-        
         // window.location.reload();
         await Swal.fire({
           icon: "success",
@@ -261,10 +269,9 @@
           timer: 1500,
           width: "25em",
         });
-        setTimeout(()=>{
+        setTimeout(() => {
           window.location.reload();
-        },700)
-
+        }, 700);
       }
     } catch (err) {
       console.log(err);
@@ -276,11 +283,10 @@
           timer: 1500,
           width: "25em",
         });
-        setTimeout(()=>{
+        setTimeout(() => {
           window.location.reload();
-        },700)
+        }, 700);
       } else if (err.response.status == 403) {
-      
         Swal.fire({
           icon: "warning",
           title: "Coupon already redeemed",
@@ -288,12 +294,11 @@
           timer: 1500,
           width: "25em",
         });
-        setTimeout(()=>{
+        setTimeout(() => {
           window.location.reload();
-        },700)
-        
+        }, 700);
       } else if (err.response.status == 404) {
-        console.log("the coupon is invalid")
+        console.log("the coupon is invalid");
         Swal.fire({
           icon: "warning",
           title: "Invalid Coupon or Expired",
@@ -301,9 +306,9 @@
           timer: 1500,
           width: "25em",
         });
-        setTimeout(()=>{
+        setTimeout(() => {
           window.location.reload();
-        },900)
+        }, 900);
       }
     }
   });
