--- a/views/user/view-product.ejs
+++ b/views/user/view-product.ejs
@@ -1,8 +1,8 @@
-<%- include('../partials/user-navbar') %>
+<%- include('../partials/nevTwo') %>
 
 
 
-<div class="row px-xl-5">
+<div class="row px-xl-5 mt-5">
            
 
   <div class="col-lg-5 pb-5">
