--- a/views/partials/user-navbar.ejs
+++ b/views/partials/user-navbar.ejs
@@ -156,7 +156,7 @@
                 <div id="header-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" style="height: 410px;">
-                            <img class="img-fluid" src="https://www.muscatgrandmall.com/media/2437/men-fashion.jpg?anchor=center&mode=crop&width=1600&height=600&rnd=132032467470000000" alt="Image">
+                            <img class="img-fluid" src="http://picassofashion.com/wp-content/uploads/2022/04/03_6bc9b7ec-8649-4f05-87f1-eda67359fe3e_1400x.webp" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
